<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="homeVM"
            type="com.weatherapp.ui.home.HomeViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/homeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cityList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/AppSideMargin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>
</layout>